--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
-    "@popperjs/core": "^2.4.0",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "tslib": "^1.10.0",
     "xlsx": "^0.16.0",
     "zone.js": "~0.10.2"
