--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@angular/common": "~10.0.0",
     "@angular/compiler": "~10.0.0",
     "@angular/core": "~10.0.0",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~10.0.0",
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
     "bootstrap": "^4.5.0",
+    "firebase": "^7.17.1",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "tslib": "^1.10.0",
